# back/src/Entity/User.php
@@ -38,7 +38,6 @@ class User implements UserInterface, PasswordAuthenticatedUserInterface
     private string $mail;
 
     #[ORM\Column(length: 255)]
-    #[Groups(["getUsers", "getSecurityTokenWallets"])]
     #[Assert\NotBlank(message: "Le mot de passe est obligatoire")]
     private string $password;
 
@@ -59,6 +58,12 @@ class User implements UserInterface, PasswordAuthenticatedUserInterface
     #[ORM\OneToMany(mappedBy: 'user', targetEntity: SecurityTokenWallet::class)]
     #[Groups(["getUsers"])]
     private Collection $securityTokenWallets;
+
+    #[ORM\Column(length: 1000, nullable: true)]
+    private ?string $access_token = null;
+
+    #[ORM\Column(length: 255, nullable: true)]
+    private ?string $password_login = null;
 
     public function __construct()
     {
@@ -217,6 +222,30 @@ class User implements UserInterface, PasswordAuthenticatedUserInterface
                 $securityTokenWallet->setUser(null);
             }
         }
+
+        return $this;
+    }
+
+    public function getAccessToken(): ?string
+    {
+        return $this->access_token;
+    }
+
+    public function setAccessToken(?string $access_token): static
+    {
+        $this->access_token = $access_token;
+
+        return $this;
+    }
+
+    public function getPasswordLogin(): ?string
+    {
+        return $this->password_login;
+    }
+
+    public function setPasswordLogin(?string $password_login): static
+    {
+        $this->password_login = $password_login;
 
         return $this;
     }
